errors.txt
hm_errors.c: In function ‘printError’:
hm_errors.c:13:2: error: implicit declaration of function ‘Print_num_fd’; did you mean ‘print_num_fd’? [-Werror=implicit-function-declaration]
   13 |  Print_num_fd(global->n, 2);
      |  ^~~~~~~~~~~~
      |  print_num_fd
cc1: all warnings being treated as errors
hm_exit.c: In function ‘myExit’:
hm_exit.c:51:4: error: implicit declaration of function ‘Print_num_fd’; did you mean ‘print_num_fd’? [-Werror=implicit-function-declaration]
   51 |    Print_num_fd(global->n, 2);
      |    ^~~~~~~~~~~~
      |    print_num_fd
cc1: all warnings being treated as errors
shell.c: In function ‘main’:
shell.c:34:4: error: implicit declaration of function ‘Print_num_fd’; did you mean ‘print_num_fd’? [-Werror=implicit-function-declaration]
   34 |    Print_num_fd(global->n, 2);
      |    ^~~~~~~~~~~~
      |    print_num_fd
cc1: all warnings being treated as errors
the_logical_operators.c: In function ‘count_the_words’:
the_logical_operators.c:37:3: error: implicit declaration of function ‘Print_num_fd’; did you mean ‘print_num_fd’? [-Werror=implicit-function-declaration]
   37 |   Print_num_fd(global->n, 2);
      |   ^~~~~~~~~~~~
      |   print_num_fd
cc1: all warnings being treated as errors
